adds working endpoint for getting all job metadata
